Fix dialog presentation consistancy Add PTN action on game over Fix events button design Fix hero action width on mobile

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -221,7 +221,7 @@
 	}
 	
 	.landing .hero-actions {
-		min-width: 25vw;
+		min-width: 50%;
 	}
 	.landing .parallax{
 		background-attachment: scroll;
